noinst_LIBRARIES = libmt32emu.a
libmt32emu_a_SOURCES = \
        Analog.cpp Analog.h BReverbModel.cpp BReverbModel.h Enumerations.h \
        File.cpp File.h FileStream.cpp FileStream.h LA32FloatWaveGenerator.cpp \
        LA32FloatWaveGenerator.h LA32Ramp.cpp LA32Ramp.h LA32WaveGenerator.cpp \
        LA32WaveGenerator.h MemoryRegion.h MidiEventQueue.h MidiStreamParser.cpp \
        MidiStreamParser.h Part.cpp Part.h Partial.cpp Partial.h \
        PartialManager.cpp PartialManager.h Poly.cpp Poly.h ROMInfo.cpp \
        ROMInfo.h SampleRateConverter.cpp SampleRateConverter.h Structures.h \
        Synth.cpp Synth.h TVA.cpp TVA.h TVF.cpp TVF.h TVP.cpp TVP.h Tables.cpp \
        Tables.h Types.h c_interface/c_interface.cpp c_interface/c_interface.h \
        c_interface/c_types.h c_interface/cpp_interface.h globals.h internals.h \
        mt32emu.h sha1/sha1.cpp sha1/sha1.h
